--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -14,7 +14,7 @@
     text-decoration: none;
     color: black;
 }
- .header {
+ .headerSection {
     display: flex;
     flex-direction: row;
     /* grid-template-columns: auto 100px; */
@@ -25,7 +25,7 @@
    
    
  }
- .header nav ul {
+ .headerSection nav ul {
     display: flex;
     gap: 10px;
    
@@ -47,15 +47,16 @@ ul, ol {
     width: 80%;
     margin: 30px auto;
 }
+.header {
+    display: flex;
+    justify-content: center;
+}
 
 .form{
-    width: 500px;
+    width: 500px; 
+    margin: auto;
   }
   
 .container{
-    display: flex;
-    justify-content: center;
-    align-items:center;
-
-    padding:20px
+    padding:100px;
   }
